# pysrt3d

./: .gitignore  LICENSE  readme.md  setup.py
example/: demo.py
example/data/: K.txt  pose.txt
source/: CMakeLists.txt
source/include/srt3d/: body.h  common.h  model.h  region_modality.h  tracker.h  viewer.h
source/pysrt3d/: pysrt3d.cpp  pysrt3d.hpp  virtual_camera.hpp
source/src/: body.cpp  model.cpp  normal_renderer.cpp  normal_viewer.cpp  region_modality.cpp  renderer_geometry.cpp  tracker.cpp  viewer.cpp
